--- a/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
+++ b/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
@@ -195,7 +195,7 @@ MON_Max_inactive_after=Max inactive interval (after request)
 # Servlet
 
 MON_No_servlet=This request was not handled by a servlet
-MON_IPlanet=It is currently not possible to record servlet information on iPlanet servers
+MON_Not_recorded=Servlet data cannot be recorded on this server
 
 MON_Servlet_context=Servlet context
 MON_Servlet_context_Mnemonic=E
@@ -286,7 +286,7 @@ MON_Exec_server_no_host=Server {0} is unreachable.
 MON_Exec_server_wrong=Server {0} is unreachable. Verify that the hostname is correct.
 #{0} hostname
 #{1} port number
-MON_Exec_server_start=The execution server {0}:{1} is unavailable. Start the server and try again.
+MON_Exec_server_start=The execution server {0} is unavailable. Start the server and try again.
 
 ACS_MON_Exec_serverA11yDesc=Execution server
 ACS_MON_Exec_serverTableA11yName=Execution Server
@@ -366,9 +366,10 @@ MON_ParamEditor_Input_required=Input missing
 # 
 # No server dialog
 #
-MON_NoServer=The HTTP monitor requires the internal HTTP server to be running in order to receive data from the execution web server
-MON_CantReplay=The HTTP monitor requires the internal HTTP server to be running in order to replay requests
+MON_NoServer=The HTTP monitor requires the internal HTTP server to be running in order to receive data from the execution web server. 
+MON_CantReplay=The HTTP monitor requires the internal HTTP server to be running in order to replay requests.
 MON_NoServerTitle=Internal HTTP server not running
+MON_Start_server=To start the server, choose Tools > Options > IDE Configuration > Server and External Tool Settings > HTTP Server and change the property Running to true.
 
 #NOI18N
 MON_Transaction_View_Help_ID=ctx_monitorintro
