--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -827,7 +827,7 @@ KBEP_CLEAR_Mnemonic=C
 ACSD_KBEP_OK=
 ACSD_KBEP_CLEAR=
 KBEP_FMT_Collision=This shortcut sequence conflicts with sequence <{0}> bound to "{1}".
-LBL_KSIP_Sequence=Shortcut SequenceQQQ:
+LBL_KSIP_Sequence=Shortcut Sequence:
 
 PROP_KeyBindings=Key Bindings
 PROP_Abbreviations=Abbreviations
