--- a/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
@@ -78,6 +78,7 @@ PROP_save_it=\ Save Customized Bindings
 PROP_save_it_mnem=S
 PROP_bindings_label=Location:
 SAXGeneratorCustomizer.saveLabel.mne=L
+DESC_saxw_files=Specify the names of the generated files. To save your customizations to the handler code generation for this DTD file, select the checkbox below. The bindings will be reloaded each time you run the wizard on this DTD file.
 
 ## SAXGeneratorMethodPanel.java
 SAXGeneratorMethodPanel.table.column1=Element (QName)
@@ -85,6 +86,7 @@ SAXGeneratorMethodPanel.table.column2=Handler Type
 SAXGeneratorMethodPanel.table.column3=Handler Method
 MSG_method_err_1=Valid part of Java identifier required.
 SAXGeneratorMethodPanel.Form.name=Element Mappings
+DESC_saxw_methods=Customize your document handler interface here. For each element, specify a handler type in the Handler Type column and specify the name of the handler method in the Handler Method column. To exclude an element from the handler interface, set its Handler Type to Ignore. 
 
 ## SAXGeneratorParsletPanel.java
 SAXGeneratorParsletPanel.table.column1=Element (QName)
@@ -93,6 +95,7 @@ SAXGeneratorParsletPanel.table.column3=Return Type
 MSG_parslet_err_1=Valid Java return type required.
 MSG_parslet_err_2=Valid Java method name required.
 SAXGeneratorParsletPanel.Form.name=Data Convertors (Optional)
+DESC_saxw_convertors=Configure your data convertor interface here (optional). Specify the name for each element's data convertor method in the Convertor Method column. If you don't want to generate a convertor method for an element, leave its Convertor Method set to [none].\nSpecify the method's return type in the Return Type column. If you select one of the IDE's preloaded return types, the conversion logic is generated for you.
 
 ## SAXGeneratorSupport.java
 SAXGeneratorSupport.title=SAX Document Handler Wizard
@@ -116,6 +119,8 @@ SAXGeneratorCustomizer.versionLabel.text=SAX Parser Version:
 SAXGeneratorCustomizer.versionLabel.mne=S
 SAXGeneratorVersionPanel.propagateSAXCheckBox.text=\ Propagate SAX Events to Generated Handler
 SAXGeneratorVersionPanel.propagateSAXCheckBox.mne=P
+DESC_saxw_versions=Specify the versions of JAXP and of the SAX parser you want to use. If you want  to include all of the original SAX parser events in the handler interface, select the checkbox below.
+
 
 ## SelectFileDialog.java
 PROP_fileNameTitle=Select File Name
