--- a/xtest/examples/MyModule/test/build.xml
+++ b/xtest/examples/MyModule/test/build.xml
@@ -14,18 +14,17 @@ Microsystems, Inc. All Rights Reserved.
 
 <project name="MyModule tests build script" basedir="." default="all">
 
+    <!-- Ant property. Value 'ignore' means that system classpath is ignored
+         and only classpath specified in build file is used. -->
     <property name="build.sysclasspath" value="ignore"/>
 
+    <!-- Points to directory with IDE to test-->
     <property name="netbeans.home" location="../../../../nbbuild/netbeans"/>
-    <property name="netbeans.test.home" value="${netbeans.home}"/>
-    
-    <!-- Says how to create classpath for compilation and code tests.
-         Can have values src, jar, ide -->
-    <property name="xtest.source.location" value="src"/>
     
     <!-- Name of tested module -->
     <property name="xtest.module" value="MyModule"/>
     
+    <!-- Home of XTest -->
     <property name="xtest.home" location="../../../../xtest"/>
    
     <!-- default testtypes, attributes and executors -->
@@ -39,59 +38,68 @@ Microsystems, Inc. All Rights Reserved.
     <property name="xtest.includes" value=""/>
     <property name="xtest.excludes" value=""/>   
     
+    <!-- Points to antfile with module's harness. 
+         Targets from that antfile is called from this build.xml -->
     <property name="xtest.module_harness.antfile" location="${xtest.home}/lib/module_harness.xml"/>
+
+    <!-- Says how to create classpath for compilation and for execution code tests.
+         Can have values src, jar, ide -->
+    <property name="xtest.source.location" value="src"/>
 
     <!-- =================== -->
     <!-- Setting classpathes -->
     <!-- =================== -->
     
-    <!-- During filling classpathes remember that only <module>/test 
-         is checked out during automated test execution so <module>/src 
-         or <module>/netbeans isn't available.
-            
-         If you need to add something from <module>/src or <module>/netbeans
-         to classpath use target prepare-compile-classpath or prepare-codetest-classpath
-         which fills path according to property xtest.source.location. This property
-         can hav values "src" (compilation and execution against sources), "jar" (compil.
-         and execut. against jars) or "ide" (compil. and execut. against installed IDE).
-         "ide" mode is used during automated test execution so it has to be always supported. 
-      -->
+    <target name="set_classpath" depends="prepare-compile-classpath,prepare-codetest-classpath">
     
-    <!-- List of directories where jars will be searched. -->
-    <property name="xtest.extra.jars.path" location=""/>
+        <!-- During filling classpathes remember that only <module>/test 
+             is checked out during automated test execution so <module>/src 
+             or <module>/netbeans isn't available. If you need to add something 
+	     from <module>/src or <module>/netbeans to classpath, 
+	     look below to "setting advanced claspathes" part of this target.
+          -->
     
-    <!-- This jars is used for compilation, execution codetests and also for
-         execution ide tests (it means this classpath will be mounted in repository).
-         You can also write only name of jar or zip file, not in which directory it is and 
-         this file will be searched in directories specified by property xtest.extra.jars.path 
-             example: <property name="xtest.extra.jars" value="jemmy.jar;jelly.jar"/>
-      -->
-                
-    <property name="xtest.extra.jars"     value="../mymodule.jar"/>
+        <!-- List of directories where jars will be searched. -->
+        <property name="xtest.extra.jars.path" location=""/>
+    
+        <!-- This jars is used for compilation, execution codetests and also for
+             execution ide tests (it means this classpath will be mounted in repository).
+             You can also write only name of jar or zip file, not in which directory it is and 
+             this file will be searched in directories specified by property xtest.extra.jars.path 
+                 example: <property name="xtest.extra.jars" value="jemmy.jar;jelly.jar"/>
+          -->
+        <property name="xtest.extra.jars"     value="../mymodule.jar"/>
+   
+        <!-- These jars will be copied to directory ${netebans.home}/lib/ext.
+	     Again you can write only name of jar or zip file, not in which directory it is and 
+             this file will be searched in directories specified by property xtest.extra.jars.path 
+                 example: <property name="xtest.extra.jars.ide" value="jdbc_driver1.zip;jdbcd_river2.jar"/>
+          -->
+        <property name="xtest.extra.jars.ide" value=""/>
 
-    <!-- These jars will be copied to directory ${netebans.home}/lib/ext.
-	 Again you can write only name of jar or zip file, not in which directory it is and 
-         this file will be searched in directories specified by property xtest.extra.jars.path 
-             example: <property name="xtest.extra.jars.ide" value="jdbc_driver1.zip;jdbcd_river2.jar"/>
-      -->
-    <property name="xtest.extra.jars.ide" value=""/>
 
-
-    <!-- Arguments which will be added into commandline of starting IDE. 
-             example: <property name="xtest.ide.commandline.suffix" value="-J-Dxtest.useclassloader=org.openidex.util"/>
-      -->
-    <property name="xtest.ide.commandline.suffix" value=""/>
+        <!-- Arguments which will be added into commandline of starting IDE. 
+                 example: <property name="xtest.ide.commandline.suffix" value="-J-Dxtest.useclassloader=org.openidex.util"/>
+          -->
+        <property name="xtest.ide.commandline.suffix" value=""/>
   	
-    <target name="init" depends="prepare-compile-classpath,prepare-codetest-classpath">
+        <!-- =========================== -->
+        <!-- Setting avanced classpathes -->
+        <!-- =========================== -->
+    
+        <!-- If you need to add something from <module>/src or <module>/netbeans
+             to classpath use target prepare-compile-classpath or prepare-codetest-classpath
+             which fills path according to property xtest.source.location. This property
+             can have values "src" (compilation and execution against sources), "jar" (compil.
+             and execut. against jars) or "ide" (compil. and execut. against installed IDE).
+             "ide" mode is used during automated test execution so it has to be always supported. 
+          -->
+    
 	<!-- This classpath is beside jars in xtest.extra.jars also used for compilation, 
 	     but it depends on property xtest.source.location which classpath will be used.
 	     Fill apropriate classpathes in targets "${xtest.source.location}compile-classath". -->
-            
 	<property name="compiletest.classpath" refid="compiletest.classpath"/>
             
-            <!--
-        <property name="compiletest.classpath" value="${junit.path};../src"/>
-	-->
 	<!-- This classpath is beside jars in xtest.extra.jars also used for execution codetests,
 	     but it depends on property xtest.source.location which classpath will be used.
 	     Fill apropriate classpathes in targets "${xtest.source.location}test-classath". -->
@@ -99,6 +107,45 @@ Microsystems, Inc. All Rights Reserved.
         
     </target>
     
+    <!-- ========= -->
+    <!-- Compilers -->
+    <!-- ========= -->
+    
+    <target name="unit-compiler" depends="set_classpath">
+       <ant dir="." antfile="${xtest.module_harness.antfile}"
+             target="buildtests">
+           <!-- This property contains directories to compile.
+    	        These directories will be compiled separately. 
+                   example: <property name="compile.srcdir" value="unit/src1;unit/src2"/>
+             -->
+           <property name="compile.srcdir" value="unit/src"/>
+       </ant>
+    </target>
+
+    <!-- ========= -->
+    <!-- Executors -->
+    <!-- ========= -->
+    
+    <!-- This target is executed from test-executor in newly created Project -->
+    <!-- Name of this task is defined in cfg-xxx.xml -->
+    <!-- This target executes tests inside IDE -->
+    <target name="runidetest" depends="set_classpath">
+        <ant dir="." antfile="${xtest.module_harness.antfile}"
+             target="test">
+           <property name="xtest.exectype" value="ide"/>
+        </ant>
+    </target>
+    
+    <!-- This target is executed from test-executor in newly created Project -->
+    <!-- Name of this task is defined in cfg-xxx.xml -->
+    <!-- This target executes standalone tests -->
+    <target name="runcodetest" depends="set_classpath">
+        <ant dir="." antfile="${xtest.module_harness.antfile}"
+             target="test">
+           <property name="xtest.exectype" value="code"/>
+        </ant>
+    </target>
+ 
     <!-- ============ -->
     <!-- Main targets -->
     <!-- ============ -->
@@ -107,7 +154,7 @@ Microsystems, Inc. All Rights Reserved.
     
     <!-- This calls target which will call compilers according to cfg file.
          You should not change this target unless you realy know what you are doing -->
-    <target name="buildtests" depends="init">
+    <target name="buildtests">
        <ant dir="." antfile="${xtest.module_harness.antfile}"
              target="compiler-launcher"/>
     </target>
@@ -148,59 +195,6 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="Default config is testtype: ${xtest.testtype}, attributes: ${xtest.attribs}."/>
     </target>
     
-    <!-- ========= -->
-    <!-- Compilers -->
-    <!-- ========= -->
-    
-    <target name="unit-compiler" depends="init">
-       <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="buildtests">
-           <!-- This property contains directories to compile.
-    	        These directories will be compiled separately. 
-                   exanple: <property name="compile.srcdir" value="unit/src1;unit/src2"/>
-             -->
-           <property name="compile.srcdir" value="unit/src"/>
-       </ant>
-    </target>
-
-    <target name="logging-compiler" depends="init">
-       <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="compiletests">
-           <!-- This property contains directories to compile.
-    	        These directories will be compiled separately. 
-                   exanple: <property name="compile.srcdir" value="unit/src1;unit/src2"/>
-             -->
-           <property name="compile.srcdir" value="logging/src"/>
-       </ant>
-       <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="jars"/>
-    </target>
-    
-    <!-- ========= -->
-    <!-- Executors -->
-    <!-- ========= -->
-    
-    <!-- This target is executed from test-executor in newly created Project -->
-    <!-- Name of this task is defined in cfg-xxx.xml -->
-    <!-- This target executes tests inside IDE -->
-    <target name="runidetest" depends="init">
-        <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="test">
-           <property name="xtest.exectype" value="ide"/>
-        </ant>
-    </target>
-    
-    <!-- This target is executed from test-executor in newly created Project -->
-    <!-- Name of this task is defined in cfg-xxx.xml -->
-    <!-- This target executes standalone tests -->
-    <target name="runcodetest" depends="init">
-        <ant dir="." antfile="${xtest.module_harness.antfile}"
-             target="test">
-           <property name="xtest.exectype" value="code"/>
-        </ant>
-    </target>
- 
-
    <!-- =============================================================
         Following targets are for "advanced" users who needs more 
         compilacated classpathes, which depends on way of execution.
