#19328 - changing javadoc and accessors bodied when prop name changes

--- a/beans/src/org/netbeans/modules/beans/Bundle.properties
+++ b/beans/src/org/netbeans/modules/beans/Bundle.properties
@@ -293,7 +293,7 @@ FMT_ChangeToIs=Do you want to change the name of the getter to is{0} ?
 # {0} = Propertyname
 FMT_ChangeMethodBody=Do you want to change the setter body of the setter {0}\n to reflect changes to PropertyChangeSupport?
 # {0} = Field name
-FMT_ChangeFieldName=Do you want to change the property name in the estimated field: {0} ?
+FMT_ChangeFieldName=Do you want to change the property name in the estimated field: {0} and the body of setter and getter?
 # {0} = Field name
 FMT_ChangeFieldType=Do you want to change the property type in the estimated field: {0} ?
 # {0} = Field name
