--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/beaninfo/Bundle.properties
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/beaninfo/Bundle.properties
@@ -105,12 +105,12 @@ PROP_TreeDocumentFragmentBeanInfo_version=Version
 HINT_TreeDocumentFragmentBeanInfo_version=Version
 
 ## TreeDocumentTypeBeanInfo.java
-PROP_TreeDocumentTypeBeanInfo_publicId=Public Id
-HINT_TreeDocumentTypeBeanInfo_publicId=Public Id
+PROP_TreeDocumentTypeBeanInfo_publicId=Public ID
+HINT_TreeDocumentTypeBeanInfo_publicId=Public ID
 PROP_TreeDocumentTypeBeanInfo_readOnly=Read Only
 HINT_TreeDocumentTypeBeanInfo_readOnly=Is this node read only?
-PROP_TreeDocumentTypeBeanInfo_systemId=System Id
-HINT_TreeDocumentTypeBeanInfo_systemId=System Id
+PROP_TreeDocumentTypeBeanInfo_systemId=System ID
+HINT_TreeDocumentTypeBeanInfo_systemId=System ID
 PROP_TreeDocumentTypeBeanInfo_elementName=Element Name
 HINT_TreeDocumentTypeBeanInfo_elementName=Element name
 
@@ -141,14 +141,14 @@ PROP_TreeEntityDeclBeanInfo_parameter=Parameter
 HINT_TreeEntityDeclBeanInfo_parameter=Parameter
 PROP_TreeEntityDeclBeanInfo_notationName=Notation Name
 HINT_TreeEntityDeclBeanInfo_notationName=Notation name
-PROP_TreeEntityDeclBeanInfo_systemId=System Id
-HINT_TreeEntityDeclBeanInfo_systemId=System Id
+PROP_TreeEntityDeclBeanInfo_systemId=System ID
+HINT_TreeEntityDeclBeanInfo_systemId=System ID
 PROP_TreeEntityDeclBeanInfo_readOnly=Read Only
 HINT_TreeEntityDeclBeanInfo_readOnly=Is this node read only?
 PROP_TreeEntityDeclBeanInfo_internalText=Internal Text
 HINT_TreeEntityDeclBeanInfo_internalText=Internal text
-PROP_TreeEntityDeclBeanInfo_publicId=Public Id
-HINT_TreeEntityDeclBeanInfo_publicId=Public Id
+PROP_TreeEntityDeclBeanInfo_publicId=Public ID
+HINT_TreeEntityDeclBeanInfo_publicId=Public ID
 PROP_TreeEntityDeclBeanInfo_type=Type
 HINT_TreeEntityDeclBeanInfo_type=Type
 
@@ -163,14 +163,14 @@ NAME_TreeNodeFilter=Node Filter
 HINT_TreeNodeFilter=Filter which could be applied in Node View Types
 
 ## TreeNotationDeclBeanInfo.java
-PROP_TreeNotationDeclBeanInfo_systemId=System Id
-HINT_TreeNotationDeclBeanInfo_systemId=System Id
+PROP_TreeNotationDeclBeanInfo_systemId=System ID
+HINT_TreeNotationDeclBeanInfo_systemId=System ID
 PROP_TreeNotationDeclBeanInfo_name=Name
 HINT_TreeNotationDeclBeanInfo_name=Name
 PROP_TreeNotationDeclBeanInfo_readOnly=Read Only
 HINT_TreeNotationDeclBeanInfo_readOnly=Is this node read only?
-PROP_TreeNotationDeclBeanInfo_publicId=Public Id
-HINT_TreeNotationDeclBeanInfo_publicId=Public Id
+PROP_TreeNotationDeclBeanInfo_publicId=Public ID
+HINT_TreeNotationDeclBeanInfo_publicId=Public ID
 
 ## TreeParameterEntityReferenceBeanInfo.java
 PROP_TreeParameterEntityReferenceBeanInfo_name=Name
