--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties
@@ -191,13 +191,13 @@ RAD_External= External
 RAD_Unparsed= Unparsed
 LAB_Internal_Text=Text:
 LAB_internValue_mn=e
-LAB_External_PublicId=Public Id:
+LAB_External_PublicId=Public ID:
 LAB_externPublic_mn=P
-LAB_External_SystemId=System Id:
+LAB_External_SystemId=System ID:
 LAB_externSystem_mn=S
-LAB_Unparsed_PublicId=Public Id:
+LAB_Unparsed_PublicId=Public ID:
 LAB_unparsedPublic_mn=P
-LAB_Unparsed_SystemId=System Id:
+LAB_Unparsed_SystemId=System ID:
 LAB_unparsedSystem_mn=S
 LAB_Unparsed_NotationName=Notation Name:
 LAB_unparsedNotation_mn=o
@@ -211,8 +211,8 @@ MNE_dtdNotationName=N
 MNE_dtdNotationPublicId=P
 MNE_dtdNotationSystemId=S
 PROP_dtdNotationName=Name:
-PROP_dtdNotationPublicId=Public Id:
-PROP_dtdNotationSystemId=System Id:
+PROP_dtdNotationPublicId=Public ID:
+PROP_dtdNotationSystemId=System ID:
 
 ## TreeParameterEntityReferenceCustomizer.java
 MNE_peRef_name=N
