#19687 Catalog and SAX wizard UI improvements.

--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
@@ -35,6 +35,10 @@ ACSD_CatalogMounterPanel=Panel for selecting catalog providers showing customize
 ## CatalogRootNode.java
 TEXT_catalog_root=XML Entity Catalogs
 PROP_Mount_Catalog=Mount Catalog
+LBL_mount=Mount Catalog...
 
 ## RefreshAction.java
 LBL_Action=Refresh
+
+## Catalog Node
+LBL_unmount=Unmount Catalog
