--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
@@ -24,10 +24,11 @@ PROP_display_name=XML Catalog at {0}
 
 ## XCatalogBeanInfo.java
 NAME_x_catalog=XML Catalog
-TEXT_x_catalog_desc=Multi-version implementation supporting v0.2 and v0.4.
+TEXT_x_catalog_desc=Multi-version implementation supporting XCatalog v0.2 and XMLCatalog v0.4.
 
 ## XCatalogCustomizer.java
 ACSD_XCatalogCustomizer=Customizer for XML Catalog
 XCatalogCustomizer.locationLabel.mne=U
 XCatalogCustomizer.locationLabel.text=XML Catalog URL:
 ACSD_locationTextField=n/a
+DESC_xcatalog_fmts=Recognized catalog formats are XCatalog v0.2 and XMLCatalog v0.4. Both are superseded by OASIS XML Catalog format.
