--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
@@ -23,6 +23,9 @@ ACSD_locationTextField=URL pointing to the catalog file
 PROP_choose_file=File...
 MNE_file=F
 ACSD_file=Button selecting local file
+HINT_pp=Prefer public mappings over system ones.
+DESC_catalog_fmts=Recognized formats are OASIS XML Catalog, XCatalog v0.2 and TR9401 (XML related part only).
+
 
 ## Catalog.java
 
@@ -36,3 +39,5 @@ DESC_loaded=Sucessfully loaded and active.
 ## CatalogBeanInfo.java
 PROP_Catalog=Sun's Resolver 1.1
 PROP_Catalog_desc=Implements OASIS XML Catalog and TR9401 standards.
+
+#\u000A## Catalog.java\u000A\u000A#{0} is a catalog location
