--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/lib/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/lib/Bundle.properties
@@ -12,5 +12,5 @@
 ## Util
 PROP_catalog_mask=Catalog Files
 TITLE_select_catalog=Select Catalog File
-PROP_select_button=Choose
+PROP_select_button=Ok
 MSG_inValidFile=Is not valid file.
