IN=5019 - MON: complete implementation of ExtraActions/setting session ID

--- a/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
+++ b/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
@@ -11,7 +11,7 @@
 
 MON_All_1=All
 MON_All_transactions_2=All Records
-MON_Browser_cookie=Replay using the browser's session cookie
+MON_Browser_cookie=Use the browser's session cookie for replays
 MON_Cancel=Cancel
 MON_Cancel_Mnemonic=C
 MON_Client_3=Client
@@ -38,18 +38,18 @@ MON_Request_19_Mnemonic=R
 MON_Header_19=Headers
 MON_Save_20=Save
 MON_Save_action_21=Save action failed
-MON_Saved_cookie=Replay using the recorded session cookie
+MON_Saved_cookie=Use the recorded session cookie for replays
 MON_Saved_Transactions_22=Saved Records
 MON_Servlet_23=Servlet
 MON_Context_23=Context
 MON_Engine_23=Engine
 MON_Session_24=Session
 MON_Show_time_25=Show/Hide time stamp
-MON_Transaction_data_26=HTTP Monitor records data display
+MON_Transaction_data_26=HTTP Monitor records display
 MON_Transactions_27=HTTP Monitor records
 MON_info_title=HTTP Monitor Message
-MON_no_server=To view data, the JSP/Servlet executor must be running
 MON_Title=HTTP Monitor
+
 #NOI18N
 MON_Transaction_View_F1_Help_ID=ctx_monitorintro
 
@@ -90,7 +90,6 @@ MON_Posted_data_Mnemonic=P
 MON_Upload_File=File to upload
 MON_No_posted_data=No data was posted with the request
 MON_Unparameterized=Data sent with this request was not parameterized
-#MON_Unparameterized_bad=This request seems to contain nonparameterized data. For the JSP or servlet to be\nable to process such data, the request should have the HTTP header "Content-type"\nset to match the actual data format (for instance "text/plain"). If the JSP or\nservlet should have received parameterized data, make sure the syntax of the input\nis correct.
 MON_Unparameterized_bad=This request seems to contain nonparameterized data. For the JSP\nor servlet to be able to process such data, the request should\nhave the HTTP header "Content-type" set to match the actual data\nformat (for instance "text/plain"). If the JSP or servlet should\nhave received parameterized data, make sure the syntax of the\ninput is correct.
 
 ACS_MON_Query_parametersA11yDesc=Query parameters
@@ -274,6 +273,14 @@ ACS_MON_HTTP_HeadersA11yDesc=HTTP headers
 ACS_MON_HTTP_HeadersTableA11yName=HTTP headers
 ACS_MON_HTTP_HeadersTableA11yDesc=HTTP headers.
 
+# Cookies
+MON_Cookies_Mnemonic=H
+MON_No_headers=No HTTP headers were recorded
+
+ACS_MON_CookiesA11yDesc=HTTP headers
+ACS_MON_CookiesTableA11yName=HTTP headers
+ACS_MON_CookiesTableA11yDesc=HTTP headers.
+
 #
 # Edit & Replay dialog
 #
@@ -296,6 +303,7 @@ MON_EditReplay=Edit and replay
 
 MON_Query_Panel_Tab=Query
 MON_Request_Panel_Tab=Request
+MON_Cookies_Panel_Tab=Cookies
 MON_Server_Panel_Tab=Server
 MON_Headers_Panel_Tab=Headers
 
@@ -309,6 +317,16 @@ MON_Bad_param_msg=The parameter must have a name
 
 ACS_MON_New_paramA11yDesc=Add parameter.
 ACS_MON_Delete_paramA11yDesc=Delete parameters.
+
+MON_Edit_cookie=Edit cookie
+MON_Delete_cookie=Delete cookies
+MON_Delete_cookie_Mnemonic=D
+MON_New_cookie=Add cookie
+MON_New_cookie_Mnemonic=A
+MON_Bad_cookie=Enter a name and a value
+
+ACS_MON_New_cookieA11yDesc=Add cookie.
+ACS_MON_Delete_cookieA11yDesc=Delete cookies.
 
 MON_Edit_header=Edit header
 MON_Delete_header=Delete headers
@@ -330,6 +348,7 @@ MON_Bad_hostname=Enter a valid hostname or IP address
 
 MON_Confirm_Delete_Headers=Confirm deletion of the following headers:
 MON_Confirm_Delete_Params=Confirm deletion of the following parameters:
+MON_Confirm_Delete_Cookies=Confirm deletion of the following cookies:
 MON_Confirmation_Required=Confirmation required
 
 MON_Send=Send HTTP request
