Adapted to the new diff API.

--- a/diff/src/org/netbeans/modules/diff/cmdline/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/cmdline/Bundle.properties
@@ -9,3 +9,6 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
 # Microsystems, Inc. All Rights Reserved.
 
+displayName=Command Line Diff
+shortDescription=
+runtimeError=The diff command ''{0}'' failed to execute in the system.
