--- a/diff/src/org/netbeans/modules/diff/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/Bundle.properties
@@ -21,6 +21,19 @@ Services/org-netbeans-modules-diff-DiffSettings.settings=Diff Settings
 CTL_DiffActionName=Diff
 CTL_DiffSettings=Diff Settings
 
+PROP_diffProvider=Default Diff Provider
+HINT_diffProvider=The default provider of differences calculation between two files.
+PROP_diffVisualizer=Default Diff Visualizer
+HINT_diffVisualizer=The default visual representation of file differences.
+PROP_mergeProvider=Default Merge Provider
+HINT_mergeProvider=The default provider of merging and collision calculation of files.
+PROP_mergeVisualizer=Default Merge Visualizer
+HINT_mergeVisualizer=The default visual representation of file merging.
+
+LBL_DiffSettingsNode=Diff Settings
+HINT_DiffSettingsNode=
+
+
 MSG_NoDifferenceInFile=No differences were found between {0} and {1}.
 MSG_DiffFailed=Diff failed for {0} and {1}.
 CTL_DiffTitleFile=Diff: {0} - {1}
