--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
@@ -27,8 +27,10 @@ NAME_x_catalog=XML Catalog
 TEXT_x_catalog_desc=Multi-version implementation supporting XCatalog v0.2 and XMLCatalog v0.4.
 
 ## XCatalogCustomizer.java
-ACSD_XCatalogCustomizer=Customizer for XML Catalog
+ACSD_XCatalogCustomizer=Customizer for XML Catalog reader. Recognized catalog formats are XCatalog v0.2 and XMLCatalog v0.4. Both are superseded by OASIS XML Catalog format.
+DESC_xcatalog_fmts=Recognized catalog formats are XCatalog v0.2 and XMLCatalog v0.4. Both are superseded by OASIS XML Catalog format.
+
 XCatalogCustomizer.locationLabel.mne=U
 XCatalogCustomizer.locationLabel.text=XML Catalog URL:
 ACSD_locationTextField=n/a
-DESC_xcatalog_fmts=Recognized catalog formats are XCatalog v0.2 and XMLCatalog v0.4. Both are superseded by OASIS XML Catalog format.
+
