--- a/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
@@ -20,26 +20,21 @@ ACSD_stubTextField=n/a
 ACSD_parsletTextField=n/a
 ACSD_parsletImplTextField=n/a
 ACSD_saveTextField=n/a
-ACSD_saveCheckBox=n/a
-ACSN_saveCheckBox=n/a
-ACSD_SAXGeneratorFilePanel=n/a
+ACSD_saveCheckBox=Save setting for next wizard session with the same DTD.
+ACSN_saveCheckBox=Save Settings
 
 # a11y - SAXGeneratorVersionPanel
-ACSD_propagateSAXCheckBox=n/a
+ACSD_propagateSAXCheckBox=Propagate original SAX events
 ACSN_propagateSAXCheckBox=n/a
 ACSD_jaxpVersionComboBox=n/a
-ACSD_propagateSAXCheckBox=n/a
-ACSD_SAXGeneratorVersionPanel=n/a
 ACSD_versionComboBox=n/a
 
 ## a11y - SAXGeneratorParsletPanel
-ACSD_SAXGeneratorParsletPanel=n/a
 ACSN_ParsletsTable=Data Convertors
-ACSD_ParsletsTable=n/a
+ACSD_ParsletsTable=Table contains DTD element declaration to convertor method mapping.
 
 ## a11y - SAXGeneratorMethodPanel
-ACSD_SAXGeneratorMethodPanel=n/a
-ACSD_table=n/a
+ACSD_table=Table contains DTD element declaration to handling method mapping.
 ACSN_table=Element Mappings
 
 ## ElementBindings.java
@@ -78,6 +73,7 @@ PROP_save_it=\ Save Customized Bindings
 PROP_save_it_mnem=S
 PROP_bindings_label=Location:
 SAXGeneratorCustomizer.saveLabel.mne=L
+ACSD_SAXGeneratorFilePanel=Specify the names of the generated files. To save your customizations to the handler code generation for this DTD file, select the checkbox below. The bindings will be reloaded each time you run the wizard on this DTD file.
 DESC_saxw_files=Specify the names of the generated files. To save your customizations to the handler code generation for this DTD file, select the checkbox below. The bindings will be reloaded each time you run the wizard on this DTD file.
 
 ## SAXGeneratorMethodPanel.java
@@ -86,6 +82,7 @@ SAXGeneratorMethodPanel.table.column2=Handler Type
 SAXGeneratorMethodPanel.table.column3=Handler Method
 MSG_method_err_1=Valid part of Java identifier required.
 SAXGeneratorMethodPanel.Form.name=Element Mappings
+ACSD_SAXGeneratorMethodPanel=Customize your document handler interface here. For each element, specify a handler type in the Handler Type column and specify the name of the handler method in the Handler Method column. To exclude an element from the handler interface, set its Handler Type to Ignore. 
 DESC_saxw_methods=Customize your document handler interface here. For each element, specify a handler type in the Handler Type column and specify the name of the handler method in the Handler Method column. To exclude an element from the handler interface, set its Handler Type to Ignore. 
 
 ## SAXGeneratorParsletPanel.java
@@ -95,6 +92,7 @@ SAXGeneratorParsletPanel.table.column3=Return Type
 MSG_parslet_err_1=Valid Java return type required.
 MSG_parslet_err_2=Valid Java method name required.
 SAXGeneratorParsletPanel.Form.name=Data Convertors (Optional)
+ACSD_SAXGeneratorParsletPanel=Configure your data convertor interface here (optional). Specify the name for each element's data convertor method in the Convertor Method column. If you don't want to generate a convertor method for an element, leave its Convertor Method set to [none].\nSpecify the method's return type in the Return Type column. If you select one of the IDE's preloaded return types, the conversion logic is generated for you.
 DESC_saxw_convertors=Configure your data convertor interface here (optional). Specify the name for each element's data convertor method in the Convertor Method column. If you don't want to generate a convertor method for an element, leave its Convertor Method set to [none].\nSpecify the method's return type in the Return Type column. If you select one of the IDE's preloaded return types, the conversion logic is generated for you.
 
 ## SAXGeneratorSupport.java
@@ -119,6 +117,7 @@ SAXGeneratorCustomizer.versionLabel.text=SAX Parser Version:
 SAXGeneratorCustomizer.versionLabel.mne=S
 SAXGeneratorVersionPanel.propagateSAXCheckBox.text=\ Propagate SAX Events to Generated Handler
 SAXGeneratorVersionPanel.propagateSAXCheckBox.mne=P
+ACSD_SAXGeneratorVersionPanel=Specify the versions of JAXP and of the SAX parser you want to use. If you want  to include all of the original SAX parser events in the handler interface, select the checkbox below.
 DESC_saxw_versions=Specify the versions of JAXP and of the SAX parser you want to use. If you want  to include all of the original SAX parser events in the handler interface, select the checkbox below.
 
 
