--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
@@ -10,7 +10,8 @@
 # Microsystems, Inc. All Rights Reserved.
 
 ## CatalogCustomizer.java
-ACSD_CatalogCustomizer=Customizer for Sun's implementation of standard catalog
+ACSD_CatalogCustomizer=Customizer for Sun's implementation of OASIS XML Catalog, XCatalog v0.2 and TR9401 (XML related part only).
+DESC_catalog_fmts=Recognized formats are OASIS XML Catalog, XCatalog v0.2 and TR9401 (XML related part only).
 
 LBL_preference=Prefer Public
 MNE_preference=P
@@ -24,7 +25,7 @@ PROP_choose_file=File...
 MNE_file=F
 ACSD_file=Button selecting local file
 HINT_pp=Prefer public mappings over system ones.
-DESC_catalog_fmts=Recognized formats are OASIS XML Catalog, XCatalog v0.2 and TR9401 (XML related part only).
+
 
 
 ## Catalog.java
